<resources>
    <string name="app_name">Location Source</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="google_maps_key">AIzaSyBSNyp6GQnnKlrMr7hD2HGiyF365tFlK5U</string>

    <string name="delete_place">Delete Place</string>
    <string name="delete_place_description">Are you sure you want to delete place?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_place_available_nlets_start_by_adding_few_places">No place available.\nLets start by adding few places.</string>
    <string name="location_source">Location Source</string>
    <string name="add_poi">Add POI</string>
    <string name="sort_by">SORT BY</string>
    <string name="sort_distance_in_ascending_order">Sort distance in ascending order</string>
    <string name="sort_distance_in_descending_order">Sort distance in descending order</string>
    <string name="apply">Apply</string>
    <string name="primary">Primary</string>
    <string name="sort">Sort</string>

</resources>